@@ -5,6 +5,7 @@ module Gluon
     # for ident(1)
     CVS_ID = '$Id$'
 
+    autoload :ErrorMessages, 'gluon/web/error'
     autoload :OneTimeToken, 'gluon/web/token'
   end
 end
