@@ -1,0 +1,25 @@
+<% cond :has_messages? do %>
+  <div
+    <% cond :has_class? do %>
+      class="<%= value :css_class %>"
+    <% end %>
+    <% cond neg(:has_class?) do %>
+      style="border-style: solid; margin: 1em 0ex; padding: 1ex 2ex; color: red"
+    <% end %>
+  >
+    <% cond :has_title? do %>
+      <h<%= value :head_level %>><%= value :title %></h<%= value :head_level %>>
+    <% end %>
+    <ul>
+      <% foreach :messages do %>
+        <li><%= value %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+<%#
+  Local Variables:
+  mode: HTML
+  indent-tabs-mode: nil
+  End:
+%>
