@@ -1,0 +1,31 @@
+<hr />
+
+<p>default:</p>
+<%= import :default %>
+
+<hr />
+
+<p>title:</p>
+<%= import :title %>
+
+<hr />
+
+<p>no title:</p>
+<%= import :no_title %>
+
+<hr />
+
+<p>head level:</p>
+<%= import :head_level %>
+
+<hr />
+
+<p>CSS class:</p>
+<%= import :css_class %>
+
+<hr />
+
+<p>no messages:</p>
+<%= import :no_messages %>
+
+<hr />
